Fixed flase potives on epicurious.  Style tweaking on options page.  Made option discriptions clearer.

--- a/css/options.css
+++ b/css/options.css
@@ -11,7 +11,7 @@ h3
 #content
 {
     width: 500px;
-    border: #5fb829 solid 10px;
+    border: black solid 1px;
     border-radius: 10px;
     background: white;
     margin-left: auto;
