--- a/css/options.css
+++ b/css/options.css
@@ -19,31 +19,40 @@
 
 body
 {
-    background-image: url(/img/bg.gif);
+  background-image: url(/img/bg.gif);
 }
 
 h3
 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 #content
 {
-    width: 500px;
-    border: black solid 1px;
-    border-radius: 10px;
-    background: white;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 10px;
+  width: 500px;
+  border: black solid 1px;
+  border-radius: 10px;
+  background: white;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 10px;
 }
 
 #logo
 {
-    float:right;
-    background-image:url(/img/grecipe-128.png);
-    width:128px;
-    height:128px;
+  float:right;
+  background-image:url(/img/grecipe-128.png);
+  width:128px;
+  height:128px;
+}
+
+button, label, input[type="checkbox"]
+{
+  cursor: pointer;
+}
+
+button[disabled] {
+  cursor: default;
 }
