Added bbcgoodfood.grr. Fixed bug where title is not html escaped when uploaded to gdocs.

--- a/templates/default.html
+++ b/templates/default.html
@@ -62,7 +62,7 @@
 </head>
 
 <body>
-  <div id="container">
+  <div id="container" class="hrecipe">
     <h1 class="fn">{{name}}</h1>
     <h3>
       {{#if author}}<span class="author">{{author}}</span>{{/if}}
