Added chow plugin. Template tweaks.

--- a/templates/default.html
+++ b/templates/default.html
@@ -45,6 +45,10 @@
       list-style-type: disc;
       margin-left: 6px;
     }
+
+    p, li {
+      margin: 5px 0;
+    }
     
     img {
       float:right;
